# diskovod

./: .gitignore  README.md  diskovod.example.json  flake.nix  pyproject.toml
diskovod/: __init__.py  admin_job_handlers.py  admin_jobs.py  admin_queries.py  agent.py  agent_actions.py  agent_tools.py  agent_types.py  attachments.py  automation.py  calculation.py  chatgpt.py  config.py  conversation.py  discord.py  durable_actions.py  events.py  http_client.py  interaction.py  invocation_evaluation.py  localization.json  localization.py  mailbox.py  main.py  migration.py  models.py  oauth.py  outbound.py  persistence.py  personality.py  redaction.py  runtime.py  security.py  steering.py  store.py  tooling.py  ui_localization.py  waits.py  web.py  web_access.py
diskovod/providers/: __init__.py  base.py  openai.py  service.py  setup.py
diskovod/static/: app.js  style.css
diskovod/templates/: _settings_nav.html  _system_nav.html  attachments.html  base.html  chat.html  chats.html  checkpoint.html  database.html  diagnostics.html  escalation.html  inbox.html  index.html  job.html  jobs.html  memories.html  overview.html  run.html  runs.html  search.html  settings_assistant.html  settings_automation.html  settings_connections.html  settings_interaction.html  settings_interface.html  settings_model.html
nix/: lib.nix  module.nix  overlay.nix
tests/: test_admin_jobs.py  test_admin_queries.py  test_agent.py  test_architecture.py  test_attachments.py  test_automation.py  test_chatgpt.py  test_config.py  test_conversation.py  test_discord.py  test_durability.py  test_escalation.py  test_http_client.py  test_interaction.py  test_invocation_evaluation.py  test_localization.py  test_mailbox.py  test_main.py  test_migration.py  test_outbound.py  test_persistence.py  test_providers.py  test_runtime.py  test_security.py  test_steering.py  test_store.py  test_template.py  test_tooling.py  test_waits.py  test_web.py  test_web_access.py
(+5 files in other folders)
