[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "diskovod"
version = "0.1.0"
description = "Human-aware Discord DM assistant"
requires-python = ">=3.13"
license = "Unlicense"
dependencies = [
  "aiohttp>=3.11,<4",
  "cryptography>=44",
  "discord.py-self>=2.1,<3",
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.20,<1",
  "uvicorn>=0.34,<1",
]

[project.scripts]
diskovod = "diskovod.main:main"

[tool.setuptools]
packages = ["diskovod"]
include-package-data = false

[tool.setuptools.package-data]
diskovod = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py313"
