[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "diskovod"
version = "0.1.0"
description = "Human-aware Discord DM assistant"
requires-python = ">=3.13"
license = "Unlicense"
dependencies = [
  "aiosqlite>=0.21,<1",
  "cryptography>=44",
  "discord.py-self>=2.1,<3",
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "langchain>=1.3.11,<2",
  "langchain-openai>=1.3.2,<2",
  "langgraph>=1.2.7,<2",
  "langgraph-checkpoint-sqlite>=3.1.0,<4",
  "httpcore2[asyncio,http2,socks]>=2.7,<3",
  "httpx2[http2,socks]>=2.7,<3",
  "pydantic>=2.12,<3",
  "python-multipart>=0.0.20,<1",
  "regex>=2024.11,<2027",
  "uvicorn>=0.34,<1",
]

[project.scripts]
diskovod = "diskovod.main:main"
diskovod-evaluate-invocation = "diskovod.invocation_evaluation:main"

[tool.setuptools.packages.find]
include = ["diskovod*"]

[tool.setuptools.package-data]
diskovod = ["templates/*.html", "static/*.css", "static/*.js", "localization.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py313"
